monitoring/ingress/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.santos.party`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: santos-party-tls
